--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,18 @@
-Package: swipl
+Package: swiplr
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Interface SWI-Prolog from R
+Version: 0.1.5
+Author: Emmanuel BATT [aut, cre]
+Maintainer: Emmanuel BATT <emmanuel.batt.cran@battfamily.fr>
+Description: Make prolog interface from R easier
+    - use prolog from Rmd documents.
+    - inject R variales into prolog applications
+    - retrive prolog results as R data.frame
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+URL: https://github.com/battmanux/swiplr
+Suggests:
+    shiny(>= 1.1.0),
+    knitr, rmarkdown
