--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: swiplr
 Type: Package
 Title: Interface SWI-Prolog from R
-Version: 0.3.0
+Version: 0.3.1
 Author: Emmanuel BATT [aut, cre]
 Maintainer: Emmanuel BATT <emmanuel.batt.cran@battfamily.fr>
 Description: Make prolog interface from R easier
@@ -13,5 +13,11 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 URL: https://github.com/battmanux/swiplr
-Suggests:
-    knitr, rmarkdown, tidyr
+Imports:
+    dplyr, 
+    visNetwork,
+    whisker,
+    knitr, 
+    rmarkdown, 
+    tidyr
+
